// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App/Pages/Current User Collectivite/Current User Collectivites Exemple 1 Item 1`] = `
<div
  className="app fr-container mt-5 flex justify-center"
  data-test="CurrentUserCollectivites"
>
  <section
    className="text-center"
  >
    <h2
      className="fr-h2 py-5"
    >
      Mes collectivités
    </h2>
    <div
      className="flex flex-wrap justify-center gap-12"
    >
      <div
        className="w-80 flex flex-col items-center justify-between p-8 bg-beige border-t-4"
      >
        <h3
          className="fr-h3 p-2 text-center "
        >
          Ardenne Métropole
        </h3>
        <div
          className="flex flex-col gap-2"
        >
          <a
            className="fr-btn fr-btn--primary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/tableau_bord"
            onClick={[Function]}
          >
            Tableau de bord
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/plan_action/plan_collectivite"
            onClick={[Function]}
          >
            Plan d'action
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/referentiels/eci"
            onClick={[Function]}
          >
            Référentiels
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/indicateurs/eci"
            onClick={[Function]}
          >
            Indicateurs
          </a>
          <div
            className="invisible"
          >
            <a
              className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
              href="/collectivite/104/users"
              onClick={[Function]}
            >
              Gestion des accès
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="p-5"
    />
    <div
      onClick={[Function]}
    >
      <button
        className="fr-btn fr-btn--secondary"
        data-test="btn-select-collectivite"
        onClick={[Function]}
      >
        Associer une collectivité à mon compte
      </button>
    </div>
  </section>
</div>
`;

exports[`Storyshots App/Pages/Current User Collectivite/Current User Collectivites Exemple 2 Items 1`] = `
<div
  className="app fr-container mt-5 flex justify-center"
  data-test="CurrentUserCollectivites"
>
  <section
    className="text-center"
  >
    <h2
      className="fr-h2 py-5"
    >
      Mes collectivités
    </h2>
    <div
      className="flex flex-wrap justify-center gap-12"
    >
      <div
        className="w-80 flex flex-col items-center justify-between p-8 bg-beige border-t-4"
      >
        <h3
          className="fr-h3 p-2 text-center "
        >
          Ardenne Métropole
        </h3>
        <div
          className="flex flex-col gap-2"
        >
          <a
            className="fr-btn fr-btn--primary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/tableau_bord"
            onClick={[Function]}
          >
            Tableau de bord
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/plan_action/plan_collectivite"
            onClick={[Function]}
          >
            Plan d'action
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/referentiels/eci"
            onClick={[Function]}
          >
            Référentiels
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/indicateurs/eci"
            onClick={[Function]}
          >
            Indicateurs
          </a>
          <div
            className="invisible"
          >
            <a
              className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
              href="/collectivite/104/users"
              onClick={[Function]}
            >
              Gestion des accès
            </a>
          </div>
        </div>
      </div>
      <div
        className="w-80 flex flex-col items-center justify-between p-8 bg-beige border-t-4"
      >
        <h3
          className="fr-h3 p-2 text-center "
        >
          Bordeaux Métropole
        </h3>
        <div
          className="flex flex-col gap-2"
        >
          <a
            className="fr-btn fr-btn--primary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/513/tableau_bord"
            onClick={[Function]}
          >
            Tableau de bord
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/513/plan_action/plan_collectivite"
            onClick={[Function]}
          >
            Plan d'action
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/513/referentiels/eci"
            onClick={[Function]}
          >
            Référentiels
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/513/indicateurs/eci"
            onClick={[Function]}
          >
            Indicateurs
          </a>
          <div
            className="invisible"
          >
            <a
              className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
              href="/collectivite/513/users"
              onClick={[Function]}
            >
              Gestion des accès
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="p-5"
    />
    <div
      onClick={[Function]}
    >
      <button
        className="fr-btn fr-btn--secondary"
        data-test="btn-select-collectivite"
        onClick={[Function]}
      >
        Associer une collectivité à mon compte
      </button>
    </div>
  </section>
</div>
`;

exports[`Storyshots App/Pages/Current User Collectivite/Current User Collectivites Exemple 3 Items 1`] = `
<div
  className="app fr-container mt-5 flex justify-center"
  data-test="CurrentUserCollectivites"
>
  <section
    className="text-center"
  >
    <h2
      className="fr-h2 py-5"
    >
      Mes collectivités
    </h2>
    <div
      className="flex flex-wrap justify-center gap-12"
    >
      <div
        className="w-80 flex flex-col items-center justify-between p-8 bg-beige border-t-4"
      >
        <h3
          className="fr-h3 p-2 text-center "
        >
          Ardenne Métropole
        </h3>
        <div
          className="flex flex-col gap-2"
        >
          <a
            className="fr-btn fr-btn--primary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/tableau_bord"
            onClick={[Function]}
          >
            Tableau de bord
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/plan_action/plan_collectivite"
            onClick={[Function]}
          >
            Plan d'action
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/referentiels/eci"
            onClick={[Function]}
          >
            Référentiels
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/indicateurs/eci"
            onClick={[Function]}
          >
            Indicateurs
          </a>
          <div
            className="invisible"
          >
            <a
              className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
              href="/collectivite/104/users"
              onClick={[Function]}
            >
              Gestion des accès
            </a>
          </div>
        </div>
      </div>
      <div
        className="w-80 flex flex-col items-center justify-between p-8 bg-beige border-t-4"
      >
        <h3
          className="fr-h3 p-2 text-center "
        >
          Bordeaux Métropole
        </h3>
        <div
          className="flex flex-col gap-2"
        >
          <a
            className="fr-btn fr-btn--primary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/513/tableau_bord"
            onClick={[Function]}
          >
            Tableau de bord
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/513/plan_action/plan_collectivite"
            onClick={[Function]}
          >
            Plan d'action
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/513/referentiels/eci"
            onClick={[Function]}
          >
            Référentiels
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/513/indicateurs/eci"
            onClick={[Function]}
          >
            Indicateurs
          </a>
          <div
            className="invisible"
          >
            <a
              className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
              href="/collectivite/513/users"
              onClick={[Function]}
            >
              Gestion des accès
            </a>
          </div>
        </div>
      </div>
      <div
        className="w-80 flex flex-col items-center justify-between p-8 bg-beige border-t-4"
      >
        <h3
          className="fr-h3 p-2 text-center "
        >
          Boucle Nord de Seine
        </h3>
        <div
          className="flex flex-col gap-2"
        >
          <a
            className="fr-btn fr-btn--primary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/1575/tableau_bord"
            onClick={[Function]}
          >
            Tableau de bord
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/1575/plan_action/plan_collectivite"
            onClick={[Function]}
          >
            Plan d'action
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/1575/referentiels/eci"
            onClick={[Function]}
          >
            Référentiels
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/1575/indicateurs/eci"
            onClick={[Function]}
          >
            Indicateurs
          </a>
          <div
            className="invisible"
          >
            <a
              className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
              href="/collectivite/1575/users"
              onClick={[Function]}
            >
              Gestion des accès
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="p-5"
    />
    <div
      onClick={[Function]}
    >
      <button
        className="fr-btn fr-btn--secondary"
        data-test="btn-select-collectivite"
        onClick={[Function]}
      >
        Associer une collectivité à mon compte
      </button>
    </div>
  </section>
</div>
`;

exports[`Storyshots App/Pages/Current User Collectivite/Current User Collectivites Exemple 4 Items 1`] = `
<div
  className="app fr-container mt-5 flex justify-center"
  data-test="CurrentUserCollectivites"
>
  <section
    className="text-center"
  >
    <h2
      className="fr-h2 py-5"
    >
      Mes collectivités
    </h2>
    <div
      className="flex flex-wrap justify-center gap-12"
    >
      <div
        className="w-80 flex flex-col items-center justify-between p-8 bg-beige border-t-4"
      >
        <h3
          className="fr-h3 p-2 text-center "
        >
          Ardenne Métropole
        </h3>
        <div
          className="flex flex-col gap-2"
        >
          <a
            className="fr-btn fr-btn--primary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/tableau_bord"
            onClick={[Function]}
          >
            Tableau de bord
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/plan_action/plan_collectivite"
            onClick={[Function]}
          >
            Plan d'action
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/referentiels/eci"
            onClick={[Function]}
          >
            Référentiels
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/104/indicateurs/eci"
            onClick={[Function]}
          >
            Indicateurs
          </a>
          <div
            className="invisible"
          >
            <a
              className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
              href="/collectivite/104/users"
              onClick={[Function]}
            >
              Gestion des accès
            </a>
          </div>
        </div>
      </div>
      <div
        className="w-80 flex flex-col items-center justify-between p-8 bg-beige border-t-4"
      >
        <h3
          className="fr-h3 p-2 text-center "
        >
          Bordeaux Métropole
        </h3>
        <div
          className="flex flex-col gap-2"
        >
          <a
            className="fr-btn fr-btn--primary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/513/tableau_bord"
            onClick={[Function]}
          >
            Tableau de bord
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/513/plan_action/plan_collectivite"
            onClick={[Function]}
          >
            Plan d'action
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/513/referentiels/eci"
            onClick={[Function]}
          >
            Référentiels
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/513/indicateurs/eci"
            onClick={[Function]}
          >
            Indicateurs
          </a>
          <div
            className="invisible"
          >
            <a
              className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
              href="/collectivite/513/users"
              onClick={[Function]}
            >
              Gestion des accès
            </a>
          </div>
        </div>
      </div>
      <div
        className="w-80 flex flex-col items-center justify-between p-8 bg-beige border-t-4"
      >
        <h3
          className="fr-h3 p-2 text-center "
        >
          Boucle Nord de Seine
        </h3>
        <div
          className="flex flex-col gap-2"
        >
          <a
            className="fr-btn fr-btn--primary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/1575/tableau_bord"
            onClick={[Function]}
          >
            Tableau de bord
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/1575/plan_action/plan_collectivite"
            onClick={[Function]}
          >
            Plan d'action
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/1575/referentiels/eci"
            onClick={[Function]}
          >
            Référentiels
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/1575/indicateurs/eci"
            onClick={[Function]}
          >
            Indicateurs
          </a>
          <div
            className="invisible"
          >
            <a
              className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
              href="/collectivite/1575/users"
              onClick={[Function]}
            >
              Gestion des accès
            </a>
          </div>
        </div>
      </div>
      <div
        className="w-80 flex flex-col items-center justify-between p-8 bg-beige border-t-4"
      >
        <h3
          className="fr-h3 p-2 text-center "
        >
          Brest Métropole
        </h3>
        <div
          className="flex flex-col gap-2"
        >
          <a
            className="fr-btn fr-btn--primary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/400/tableau_bord"
            onClick={[Function]}
          >
            Tableau de bord
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/400/plan_action/plan_collectivite"
            onClick={[Function]}
          >
            Plan d'action
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/400/referentiels/eci"
            onClick={[Function]}
          >
            Référentiels
          </a>
          <a
            className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
            href="/collectivite/400/indicateurs/eci"
            onClick={[Function]}
          >
            Indicateurs
          </a>
          <div
            className="invisible"
          >
            <a
              className="fr-btn fr-btn--secondary fr-btn--sm fr-fi-arrow-right-line fr-btn--icon-right w-full"
              href="/collectivite/400/users"
              onClick={[Function]}
            >
              Gestion des accès
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="p-5"
    />
    <div
      onClick={[Function]}
    >
      <button
        className="fr-btn fr-btn--secondary"
        data-test="btn-select-collectivite"
        onClick={[Function]}
      >
        Associer une collectivité à mon compte
      </button>
    </div>
  </section>
</div>
`;
